# hlox

./: .gitignore  cabal.project.freeze  hlox.cabal  test.lox
app/: Main.hs
src/: Analyzer.hs  Ast.hs  Interpreter.hs  Parser.hs  Scanner.hs  Token.hs
