cabal-version:      2.4
name:               hlox
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Travis
maintainer:         tssund93@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:
        src
    ghc-options: -Wall
    exposed-modules:
        Analyzer
      , Ast
      , Interpreter
      , Parser
      , Scanner
      , Token
    default-extensions: OverloadedStrings, LambdaCase, NamedFieldPuns
    build-depends:
        base >=4.7 && <5
      , containers
      , exceptions
      , mtl
      , text
      , time
      , transformers
    default-language: Haskell2010

executable hlox
    main-is:          Main.hs
    ghc-options: -Wall

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions: OverloadedStrings, LambdaCase, NamedFieldPuns
    build-depends:
        base ^>=4.14.3.0
      , containers
      , hlox
      , exceptions
    hs-source-dirs:   app
    default-language: Haskell2010
